Fix CSS responsiveness issues on mobile

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,6 @@
 .hacker__news__app-header {
-  width: 90rem;
+  display: flex;
+  width: 100%;
   height: 7.125rem;
   box-shadow: 0 1px 4px 0 rgba(0, 21, 41, 0.12);
   border-bottom: 1px solid #ececec;
@@ -11,5 +12,23 @@
 }
 
 .hacker__news__app-header > img {
-  margin: 2.75rem 0 2.625rem 9.735rem;
+  margin-top: 2.75rem;
+  margin-bottom: 2.625rem;
+  justify-self: center;
+}
+
+@media screen and (min-width: 506px) {
+  .hacker__news__app-header > img {
+    margin-left: 9.735rem;
+  }
+}
+
+
+@media screen and (max-width: 505px) {
+  .hacker__news__app-header {
+    justify-content: center;
+  }
+  .hacker__news__app-header > img {
+    margin-left: 0;
+  }
 }
